added user functions
